--- a/src/App.css
+++ b/src/App.css
@@ -4,19 +4,27 @@
   height: 105vh;
   width: 100vw;
   overflow: hidden;
+  font-family: 'Almendra', serif;
+
 }
 
 .map-container {
-  justify-content: center;
-  align-items: center;
-  /* width: 20%;
-  left: 100%; */
+  /* display: flex; */
+  /* left: 100%; */
 }
 
-.react-mapbox {
-  /* width: 20%;
-  left: 100%;
-  right: 100%; */
+.mapboxgl-map {
+}
+
+.map-description {
+  display: flex;
+  justify-content: center;
+  margin: 20px;
+}
+
+.historical-event-form {
+  display: flex;
+  justify-content: center;
 }
 
 .pop-up-image {
@@ -25,18 +33,46 @@
 }
 
 .navbar {
-  display: inline-block;
-   margin: 0;
-   font-size: 25px;
-   color: red;
+  display:flex;
+  margin: 0;
+  font-size: 25px;
+  color: black;
+  justify-content: center;
+  margin-left: 50px;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+}
+
+.historical-event-description {
+  display: flex;
+  justify-content: center;
+  margin: 20px;
+}
+
+.coat-of-arms {
+  display: flex;
+  width: auto;
+  height: 180px;
+  margin: 20px; 
 }
 
 .nav-item {
-  display: inline;
+  display: flex;
   width: 100px;
-  margin-right: 20px;
-  float: right;
-  padding: 20px;
+  /* margin-right: 20px; */
+  /* float: right; */
+  /* padding: 20px; */
+  font-size: 1.5em;
+  min-width: 250px;
+  background: rgb(256,256,256,.5);
+  margin: 25px;
+  border-radius: 25px;
+  justify-content: center;
+  margin-left: 300px;
+  height: 160px;
 }
 
 .App-logo {
