--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@
 }
 
 .pop-up-image {
-  height: 200px;
+  height: 120px;
   width: auto;
 }
 
@@ -54,9 +54,10 @@ a {
 
 .coat-of-arms {
   display: flex;
-  width: auto;
-  height: 150px;
-  margin: 20px;
+  width: 40px;
+  height: auto;
+  margin-left: 20px;
+
 }
 
 .nav-item {
@@ -65,14 +66,19 @@ a {
   /* margin-right: 20px; */
   /* float: right; */
   /* padding: 20px; */
-  font-size: 1.5em;
+  font-size: 1.7em;
+  font-weight: bold;
   min-width: 250px;
   background: rgb(256,256,256,.5);
   margin: 25px;
   border-radius: 25px;
   justify-content: center;
-  margin-left: 300px;
-  height: 120px;
+  margin-left: 200px;
+  height: 80px;
+}
+
+.nav-item-text {
+  margin: 20px;
 }
 
 .App-logo {
