--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@
 }
 
 .mapboxgl-map {
+  /* z-index: -1; */
 }
 
 .map-description {
@@ -25,11 +26,15 @@
 .historical-event-form {
   display: flex;
   justify-content: center;
+  flex-direction: column;
 }
 
 .pop-up-image {
   height: 120px;
   width: auto;
+  display: flex;
+  justify-content: center;
+  margin-left: 20px; 
 }
 
 .navbar {
@@ -39,6 +44,7 @@
   color: black;
   justify-content: center;
   /* margin-left: 20px; */
+  /* z-index: -1; */
 }
 
 a {
