--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@
   width: auto;
   display: flex;
   justify-content: center;
-  margin-left: 20px; 
+  margin-left: 20px;
 }
 
 .navbar {
@@ -60,8 +60,8 @@ a {
 
 .coat-of-arms {
   display: flex;
-  width: 40px;
-  height: auto;
+  /* width: 20px; */
+  height: 50;
   margin-left: 20px;
 
 }
