--- a/src/App.css
+++ b/src/App.css
@@ -25,9 +25,14 @@
 
 .historical-event-form {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   flex-direction: row;
-  width: 70%;
+  align-items: center;
+  flex-wrap: nowrap
+}
+
+.historical-event-form-item{
+  padding:0 15px;
 }
 
 .pop-up-image {
@@ -38,15 +43,6 @@
   margin-left: 20px;
 }
 
-.navbar {
-  display:flex;
-  margin: 0;
-  font-size: 20px;
-  color: black;
-  justify-content: center;
-  /* margin-left: 20px; */
-  /* z-index: -1; */
-}
 
 a {
   color: black;
@@ -67,10 +63,20 @@ a {
 
 }
 
+.navbar {
+  display:flex;
+  margin: 0;
+  font-size: 20px;
+  color: black;
+  justify-content: center;
+  /* margin-left: 20px; */
+  /* z-index: -1; */
+}
+
 .nav-item {
   display: flex;
   width: 100px;
-  /* margin-right: 20px; */
+  margin-right: 20px;
   /* float: right; */
   /* padding: 20px; */
   font-size: 1.7em;
