--- a/src/components/App.css
+++ b/src/components/App.css
@@ -111,8 +111,8 @@ a {
   display: flex;
   width: 100px;
   margin-right: 20px;
-  /* float: right; */
-  /* padding: 20px; */
+  float: right;
+  padding: 20px; 
   font-size: 1.7em;
   font-weight: bold;
   min-width: 250px;
