--- a/src/components/App.css
+++ b/src/components/App.css
@@ -8,28 +8,29 @@
 
 }
 
-.map-container {
-  /* display: flex; */
-  /* left: 100%; */
-}
-
-.mapboxgl-map {
-  /* z-index: -1; */
-}
-
 .map-description {
+  margin-top: 5px;
+  display: flex;
+  justify-content: center;
+  width: 90%;
+  margin-left: 5%;
+  font-size: 12px;
+}
+
+.historical-event-description {
+  margin-top: 5px;
   display: flex;
   justify-content: center;
   /* margin: 20px; */
-  width: 80%;
-  margin: 20px;
+  width: 60%;
   margin-left: 10%;
+  width: 90%;
+  margin-left: 5%;
+  font-size: 12px;
 }
 
 .mapboxgl-popup-content{
   background: none;
-
-  /* border: 2px solid black; */
 }
 
 .historical-event-form {
@@ -80,14 +81,6 @@ a {
   text-decoration: none;
 }
 
-.historical-event-description {
-  display: flex;
-  justify-content: center;
-  margin: 20px;
-  width: 80%;
-  margin-left: 10%;
-}
-
 .coat-of-arms {
   display: flex;
   width: auto;
@@ -99,8 +92,8 @@ a {
 
 .navbar {
   display:flex;
-  margin: 0px;
-  font-size: 0px;
+  margin: 10px;
+  font-size: 20px;
   color: black;
   justify-content: center;
   /* margin-left: 20px; */
@@ -109,10 +102,10 @@ a {
 
 .nav-item {
   display: flex;
-  width: 100px;
+  width: 50px;
   margin-right: 20px;
-  float: right;
-  padding: 20px; 
+  /* float: right; */
+  /* padding: 20px; */
   font-size: 1.7em;
   font-weight: bold;
   min-width: 250px;
@@ -120,7 +113,7 @@ a {
   margin: 25px;
   border-radius: 25px;
   justify-content: center;
-  margin-left: 200px;
+  margin-left: 130px;
   height: 80px;
 }
 
