--- a/src/components/App.css
+++ b/src/components/App.css
@@ -9,16 +9,17 @@
 }
 
 .map-description {
-  margin-top: 5px;
+  margin-top: 20px;
+  margin-bottom: 10px;
   display: flex;
   justify-content: center;
   width: 90%;
   margin-left: 5%;
-  font-size: 12px;
+  font-size: 14px;
 }
 
 .historical-event-description {
-  margin-top: 5px;
+  margin-top: 10px;
   display: flex;
   justify-content: center;
   /* margin: 20px; */
@@ -26,7 +27,7 @@
   margin-left: 10%;
   width: 90%;
   margin-left: 5%;
-  font-size: 12px;
+  font-size: 14px;
 }
 
 .mapboxgl-popup-content{
@@ -43,28 +44,25 @@
 }
 
 .historical-event-form-item {
-  padding:0 5px;
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
 }
 
 .form-label {
-
 }
 
 .form-input {
-  margin-left: 10px;
   border: 1px solid blue;
   background-color: rgb(155,46,46,.5);
   border-radius: 4px;
 }
 
 .submit-button {
-  margin-right: 15px;
-   border: none;
-   text-decoration: none;
-   border-radius: 10px;
+  margin-top: 18px;
+  border: none;
+  text-decoration: none;
+  border-radius: 10px;
 }
 
 .pop-up-image {
